--- a/css/Dashboard.css
+++ b/css/Dashboard.css
@@ -79,7 +79,7 @@
 
 /* checkbox */
 #nav-toggle:checked+ .slidebar{
-    /* width: 70px;    */
+    width: 70px;   
 }
 #nav-toggle:checked+ .slidebar .slidebar-brand{
     font-size: 24px;
@@ -108,7 +108,7 @@
     display: none;
 }
 #nav-toggle:checked ~ .main-content header{
-    background-color: white;
+/*     background-color: white; */
     width: calc(100% - 70px);
     left: 70px;
 }
