--- a/css/NewEmployee.css
+++ b/css/NewEmployee.css
@@ -77,6 +77,7 @@
     border-radius: 20px 0 0 20px;
 }
 
+
 /* checkbox */
 #nav-toggle:checked+ .slidebar{
     width: 70px;   
@@ -133,7 +134,7 @@ header {
     display: none;
 }
 
-header h2 {
+header h2.namelogo {
     color: #222;
 }
 
@@ -163,65 +164,6 @@ main {
     padding: 2rem 1.5rem;
     background-color: #f1f5f9;
     min-height: calc(100vh - 90px);
-}
-.choose{
-    font-size: 11px;
-    font-size: .8rem;
-    padding: .5rem 1rem;
-    cursor: text;
-    margin-right: 10px;
-}
-.recent-grid {}
-
-.card {
-    background-color: rgb(245, 241, 236);
-    border-radius: 5px;
-}
-
-.card-header,
-.card-body {
-    padding: 1rem;
-}
-
-.card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid rgb(0, 0, 0);
-}
-.find,
-.card-header button {
-    background: var(--main-color);
-    border-radius: 10px;
-    color: white;
-    font-size: .8rem;
-    padding: .5rem 1rem;
-    cursor: pointer;
-}
-.find:hover,
-.card-header button:hover {
-    color: var(--main-color);
-    background-color: white;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-thead tr {
-    border: solid 1px rgb(252, 46, 46);
-}
-
-thead td {
-    font-weight: 700;
-}
-
-td {
-    text-align: center;
-    padding: .5rem 1rem;
-    font-size: .9rem;
-    color: #222;
-    border: solid 1px #ccc;
 }
 
 /* menu admin */
@@ -253,3 +195,175 @@ td {
     background-color:var(--main-color);
 }
 /* menu admin */
+
+/* main contact */
+hr {
+	box-sizing: content-box;
+	height: 0;
+	overflow: visible;
+}
+
+p {
+	margin-top: 0;
+	margin-bottom: 1rem;
+}
+
+
+label {
+	display: inline-block;
+	margin-bottom: 0.5rem;
+}
+
+button {
+	border-radius: 0;
+}
+
+input,
+button,
+select {
+	margin: 0;
+	font-family: inherit;
+	font-size: inherit;
+	line-height: inherit;
+}
+
+button,
+input {
+	overflow: visible;
+}
+
+button,
+select {
+	text-transform: none;
+}
+
+[role="button"] {
+	cursor: pointer;
+}
+
+select {
+	word-wrap: normal;
+}
+
+
+.container-fluid {
+	width: 100%;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
+    margin-top: 0px;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	margin-right: -15px;
+	margin-left: -15px;
+}
+
+.col {
+	flex-basis: 0;
+	flex-grow: 1;
+	min-width: 0;
+	max-width: 100%;
+}
+
+.col-auto {
+	flex: 0 0 auto;
+	width: auto;
+	max-width: 100%;
+}
+
+.col-12 {
+	flex: 0 0 100%;
+	max-width: 100%;
+}
+
+.col-md-auto {
+	flex: 0 0 auto;
+	width: auto;
+	max-width: 100%;
+}
+
+.col-md-4 {
+	flex: 0 0 33.33333%;
+	max-width: 33.33333%;
+}
+
+.col-md-6 {
+	flex: 0 0 50%;
+	max-width: 50%;
+}
+.col-md-8 {
+	flex: 0 0 66.66667%;
+	max-width: 66.66667%;
+}
+
+.col-xl-10 {
+	flex: 0 0 83.33333%;
+	max-width: 83.33333%;
+}
+
+.form-control {
+	display: block;
+	width: 100%;
+	height: calc(1.5em + 0.75rem + 2px);
+	padding: 0.375rem 0.75rem;
+	font-size: 0.875rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #495057;
+	background-color: #ffffff;
+	background-clip: padding-box;
+	border: 1px solid #dee2e6;
+	border-radius: 0.25rem;
+}
+
+.form-group {
+	margin-bottom: 1rem;
+}
+
+.form-row {
+	display: flex;
+	flex-wrap: wrap;
+	margin-right: -5px;
+	margin-left: -5px;
+}
+
+.form-row > .col,
+.form-row > [class*="col-"] {
+	padding-right: 15px;
+	padding-left: 15px;
+}
+
+.btn {
+	display: inline-block;
+	font-weight: 400;
+	color: #6c757d;
+	text-align: center;
+	background-color: transparent;
+	border: 1px solid transparent;
+	padding: 0.375rem 0.75rem;
+	font-size: 0.875rem;
+	line-height: 1.5;
+	border-radius: 0.25rem;
+}
+.btn-primary {
+	color: #ffffff;
+	background-color: #1b68ff;
+	border-color: #1b68ff;
+}
+.btn-primary:hover {
+	color: #ffffff;
+	background-color: #0052f4;
+	border-color: #004ee7;
+}
+
+.justify-content-center {
+	justify-content: center !important;
+}
+
+.align-items-center {
+	align-items: center !important;
+}
